--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<!--Header Starts-->
+<!--========================Header Starts======================================-->
 
 	<div class="header">
 		
@@ -20,9 +20,9 @@
 
 	</div>
 
-<!--Header Ends-->
+<!--==========================Header Ends======================================-->
 
-<!--Navigation starts-->
+<!--==============================Navigatin starts=============================-->
 
 	<div class="navigation">
 		<ul>
@@ -32,9 +32,9 @@
 			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
 		</ul>
 	</div>
-<!--Navigation Ends-->
+<!--==============================Navigatin Ends=============================-->
 
-<!--Slider Starts-->
+<!--==============================Slider Starts==============================-->
 
 		<div id="slider">
 			<ul>				
@@ -44,7 +44,7 @@
 			</ul>
 		</div>
 
-<!--Slider   Ends-->
+<!--==============================Slider   Ends==============================-->
 
 
 <!--==============================Footer Starts==============================-->
